entrypoints/ui/style.css
tempad {
  display: block;
  position: absolute;

  font-family: var(--font-family-ui);
  font-size: 11px;
  color: var(--text-primary);

  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
}

[data-fpl-version="ui3"] tempad {
  color: var(--color-text);
}

tempad *,
tempad *::before,
tempad *::after {
  box-sizing: border-box;
}

/** Tiny utility classes */
tempad .tp-row {
  display: flex;
  align-items: center;
  justify-content: flex-start;
}

tempad .tp-row-justify {
  justify-content: space-between;
}

tempad .tp-shrink {
  flex-shrink: 1;
  min-width: 0;
}

tempad .tp-gap {
  gap: 0;
}

tempad .tp-gap-l {
  gap: var(--spacer-1);
}

tempad .tp-ellipsis {
  overflow: hidden;
  text-overflow: ellipsis;
  white-space: nowrap;
  min-width: 0;
}

tempad input,
tempad select {
  cursor: default;
}

tempad input:not([type]),
tempad input[type="text"],
tempad input[type="number"] {
  height: 28px;
  border: 1px solid var(--color-border);
  border-radius: 2px;
  padding: 0 7px;
  background-color: var(--color-bg);
}

tempad input[type="number"]::-webkit-inner-spin-button,
tempad input[type="number"]::-webkit-outer-spin-button {
  -webkit-appearance: none;
  margin: 0;
}

tempad input[type="text"]:focus-visible,
tempad input[type="number"]:focus-visible {
  border: 1px solid var(--color-border-selected);
  outline: 1px solid var(--color-border-selected);
  outline-offset: -2px;
}

[data-fpl-version="ui3"] tempad .tp-gap {
  gap: var(--spacer-1);
}

[data-fpl-version="ui3"] tempad .tp-gap-l {
  gap: var(--spacer-2);
}

[data-fpl-version="ui3"] tempad select {
  height: var(--spacer-4);
  border: 1px solid var(--color-border);
  border-radius: var(--radius-medium);
  background-image: url("data:image/svg+xml,%3Csvg class='svg' xmlns='http://www.w3.org/2000/svg' width='8' height='7' viewBox='0 0 8 7'%3E%3Cpath fill='%23000000e5' fill-opacity='1' fill-rule='evenodd' stroke='none' d='m3.646 5.354-3-3 .708-.708L4 4.293l2.646-2.647.708.708-3 3L4 5.707l-.354-.353z'%3E%3C/path%3E%3C/svg%3E");
  font-family: var(--text-body-medium-font-family);
  font-size: var(--text-body-medium-font-size);
  font-weight: var(--text-body-medium-font-weight);
  letter-spacing: var(--text-body-medium-letter-spacing);
  line-height: var(--text-body-medium-line-height);
}

[data-preferred-theme="dark"][data-fpl-version="ui3"] tempad select {
  background-image: url("data:image/svg+xml,%3Csvg class='svg' xmlns='http://www.w3.org/2000/svg' width='8' height='7' viewBox='0 0 8 7'%3E%3Cpath fill='%23fff' fill-opacity='1' fill-rule='evenodd' stroke='none' d='m3.646 5.354-3-3 .708-.708L4 4.293l2.646-2.647.708.708-3 3L4 5.707l-.354-.353z'%3E%3C/path%3E%3C/svg%3E");
}

[data-fpl-version="ui3"] tempad input[type="text"],
[data-fpl-version="ui3"] tempad input[type="number"] {
  height: var(--spacer-4);
  border: 1px solid var(--color-border);
  border-radius: var(--radius-medium);
  border-color: var(--color-bg-secondary);
  background-color: var(--color-bg-secondary);
  font-family: var(--text-body-medium-font-family);
  font-size: var(--text-body-medium-font-size);
  font-weight: var(--text-body-medium-font-weight);
  letter-spacing: var(--text-body-medium-letter-spacing);
  line-height: var(--text-body-medium-line-height);
}

[data-fpl-version="ui3"] tempad select:focus-visible,
[data-fpl-version="ui3"] tempad input[type="text"]:focus,
[data-fpl-version="ui3"] tempad input[type="number"]:focus {
  border-color: var(--color-border-selected);
  outline: unset;
}

#react-page:not(:has(#fullscreen-root .gpu-view-content canvas):has(#left-panel-container))
  ~ tempad {
  display: none;
}

.os-scrollbar {
  --os-track-bg-hover: var(--color-scrollbartrackhover);
  --os-track-bg-active: var(--color-scrollbartrackdrag);
  --os-handle-bg: var(--color-scrollbar);
  --os-handle-bg-hover: var(--color-scrollbar);
  --os-handle-bg-active: var(--color-scrollbar);
}

.os-scrollbar-vertical:hover::before {
  content: "";
  position: absolute;
  top: 0;
  bottom: 0;
  left: -1px;
  width: 1px;
  background-color: var(--color-border);
}

[data-testid="design-toolbelt-wrapper"] [class^="toolbelt_banner--container"],
[data-testid="design-toolbelt-wrapper"]:has([class^="toolbelt_banner--container"])
  [class^="design_toolbelt--enabledToolsRow"]
  ~ *,
[data-testid="design-toolbelt-wrapper"]:has([class^="toolbelt_banner--container"])
  [class^="mode_toggle_switch_divider"],
[data-testid="design-toolbelt-wrapper"]:has([class^="toolbelt_banner--container"])
  [class^="mode_switcher_toggle--toggleWrapper"] {
  display: none !important;
}

